[project]
name = "switchcost"
version = "0.1.1"
description = "An offline tool that measures how much time you lose to context switching—no advice, just awareness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ndjson>=0.3.1",
    "pyobjc>=12.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pyobjc>=12.1",
    "ty>=0.0.17",
]
